# embeddr-comfyui

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  __init__.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.mts
.github/workflows/: ci.yml  publish.yml  release.yml
nodes/: EmbeddrFindSimilar.py  EmbeddrFindSimilarText.py  EmbeddrLoadImage.py  EmbeddrLoadImages.py  EmbeddrMergeIDs.py  EmbeddrUploadImage.py  EmbeddrUploadVideo.py
nodes/utils/: api.py  config.py
ui/: globals.css  main.tsx  types.ts
ui/components/: GlobalDialog.tsx
ui/components/panels/: EmbeddrPanel.tsx  ImageDetails.tsx  SearchBar.tsx
ui/components/tabs/: ExploreTab.tsx
ui/components/ui/: ImageGrid.tsx  SearchBar.tsx  SettingsForm.tsx
ui/hooks/: useEmbeddrApi.ts  useEmbeddrImages.ts  useEmbeddrLibraries.ts  useEmbeddrSettings.ts  useNodeScanner.ts
ui/nodes/: EmbeddrLoadImage.ts  EmbeddrMergeIds.ts
